5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1706_3058.log
== TEST (2019-04-29 19:15:36) 
-- CODE:
valor1= float(input())
valor2 = area*custo+ adubo
print("valor total")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2 = area*custo+ adubo
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:15:47) 
-- CODE:
valor1= float(input())
valor2 = area*custo+ adubo
print("valor total")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2 = area*custo+ adubo
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:35:07) 
-- CODE:
a=float(onput("area:"))

if(a< o and a < 100):
	valor = a* 2+ 100
elif (a > 10 and a < 250):
	valor =a * 1,80+ 150
elif(a< 100 and a < 2500):
	valor= a * 1.50 + 200
elif (a < 2500 and a <10000 ):
	valor = a* 1.50+250
else:
	valor = a*1,20+250
	print(valor)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=float(onput("area:"))
NameError: name 'onput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:36:35) 
-- CODE:
a=float(input("area:"))

if(a > o and a < 100):
	valor = a* 2+ 100
	
elif (a > 10 and a < 250):
	valor =a * 1,80+ 150
	
elif(a>100 and a < 2500):
	valor= a * 1.50 + 200
	
elif (a > 2500 and a < 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1,20+250
	print(valor)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(a > o and a < 100):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:36:43) 
-- CODE:
a=float(input("area:"))

if(a > o and a < 100):
	valor = a* 2+ 100
	
elif (a > 10 and a < 250):
	valor =a * 1,80+ 150
	
elif(a>100 and a < 2500):
	valor= a * 1.50 + 200
	
elif (a > 2500 and a < 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1,20+250
	print(valor)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(a > o and a < 100):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:38:39) 
-- CODE:
a=float(input("area:"))

if(a >= o and a <= 100):
	valor = a* 2+ 100
	
elif (a >= 10 and a <= 250):
	valor = a * 1,80+ 150
	
elif(a>=100 and a <= 2500):
	valor= a * 1.50 + 200
	
elif (a >= 2500 and a <= 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1,20+250
	print(valor)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(a >= o and a <= 100):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:47:09) 
-- CODE:
a=float(input("area:"))

if(a >= 0 and a <= 100):
	valor = a* 2+ 100
	
elif (a >= 10 and a <= 250):
	valor = a * 1,80+ 150
	
elif(a>=100 and a <= 2500):
	valor= a * 1.50 + 200
	
elif (a >= 2500 and a <= 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1,20+250
	print(valor)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(a >= o and a <= 100):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:47:20) 
-- CODE:
a=float(input("area:"))

if(a >= 0 and a <= 100):
	valor = a* 2+ 100
	
elif (a >= 10 and a <= 250):
	valor = a * 1,80+ 150
	
elif(a>=100 and a <= 2500):
	valor= a * 1.50 + 200
	
elif (a >= 2500 and a <= 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1,20+250
	print(valor)



-- EXECUTION TIME:
0.153596
-- TEST CASE 1:
---- input:
125
---- correct output:
375.0
---- user output:

-- TEST CASE 2:
---- input:
15000
---- correct output:
18250.0
---- user output:
(15000.0, 270)
-- TEST CASE 3:
---- input:
81
---- correct output:
262.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:47:42) 
-- CODE:
a=float(input("area:"))

if(a >= 0 and a <= 100):
	valor = a* 2+ 100
	
elif (a >= 10 and a <= 250):
	valor = a * 1,80+ 150
	
elif(a>=100 and a <= 2500):
	valor= a * 1.50 + 200
	
elif (a >= 2500 and a <= 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1,20+250
print(valor)



-- OUTPUT:
(125.0, 230)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:48:26) 
-- CODE:
a=float(input("area:"))

if(a >= 0 and a <= 100):
	valor = a* 2+ 100
	
elif (a >= 10 and a <= 250):
	valor = a * 1,80+ 150
	
elif(a>=100 and a <= 2500):
	valor= a * 1.50 + 200
	
elif (a >= 2500 and a <= 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1,20+250
print(valor,2)



-- OUTPUT:
(125.0, 230) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:48:34) 
-- CODE:
a=float(input("area:"))

if(a >= 0 and a <= 100):
	valor = a* 2+ 100
	
elif (a >= 10 and a <= 250):
	valor = a * 1,80+ 150
	
elif(a>=100 and a <= 2500):
	valor= a * 1.50 + 200
	
elif (a >= 2500 and a <= 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1,20+250
print(valor,2)



-- EXECUTION TIME:
0.167503
-- TEST CASE 1:
---- input:
125
---- correct output:
375.0
---- user output:
(125.0, 230) 2
-- TEST CASE 2:
---- input:
15000
---- correct output:
18250.0
---- user output:
(15000.0, 270) 2
-- TEST CASE 3:
---- input:
81
---- correct output:
262.0
---- user output:
262.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:48:49) 
-- CODE:
a=float(input("area:"))

if(a >= 0 and a <= 100):
	valor = a* 2+ 100
	
elif (a >= 10 and a <= 250):
	valor = a * 1,80+ 150
	
elif(a>=100 and a <= 2500):
	valor= a * 1.50 + 200
	
elif (a >= 2500 and a <= 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1,20+250
print(valor,  2)



-- OUTPUT:
(125.0, 230) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:49:06) 
-- CODE:
a=float(input("area:"))

if(a >= 0 and a <= 100):
	valor = a* 2+ 100
	
elif (a >= 10 and a <= 250):
	valor = a * 1,80+ 150
	
elif(a>=100 and a <= 2500):
	valor= a * 1.50 + 200
	
elif (a >= 2500 and a <= 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1,20+250
print(valor,  2)



-- OUTPUT:
(125.0, 230) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:49:10) 
-- CODE:
a=float(input("area:"))

if(a >= 0 and a <= 100):
	valor = a* 2+ 100
	
elif (a >= 10 and a <= 250):
	valor = a * 1,80+ 150
	
elif(a>=100 and a <= 2500):
	valor= a * 1.50 + 200
	
elif (a >= 2500 and a <= 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1,20+250
print(valor,  2)



-- EXECUTION TIME:
0.20019
-- TEST CASE 1:
---- input:
125
---- correct output:
375.0
---- user output:
(125.0, 230) 2
-- TEST CASE 2:
---- input:
15000
---- correct output:
18250.0
---- user output:
(15000.0, 270) 2
-- TEST CASE 3:
---- input:
81
---- correct output:
262.0
---- user output:
262.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:51:22) 
-- CODE:
a=float(input("area:"))

if(a >= 0 and a <= 100):
	valor = a* 2+ 100
	
elif (a >= 10 and a <= 250):
	valor = a * 1.80+ 150
	
elif(a>=100 and a <= 2500):
	valor= a * 1.50 + 200
	
elif (a >= 2500 and a <= 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1.20+250
print(round(valor,  2))



-- OUTPUT:
375.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:51:31) 
-- CODE:
a=float(input("area:"))

if(a >= 0 and a <= 100):
	valor = a* 2+ 100
	
elif (a >= 10 and a <= 250):
	valor = a * 1.80+ 150
	
elif(a>=100 and a <= 2500):
	valor= a * 1.50 + 200
	
elif (a >= 2500 and a <= 10000 ):
	valor = a* 1.50+250
	
else:
	valor = a*1.20+250
print(round(valor,  2))



-- EXECUTION TIME:
0.142159
-- TEST CASE 1:
---- input:
125
---- correct output:
375.0
---- user output:
375.0
-- TEST CASE 2:
---- input:
15000
---- correct output:
18250.0
---- user output:
18250.0
-- TEST CASE 3:
---- input:
81
---- correct output:
262.0
---- user output:
262.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
